--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/welcome/welcome",
     "pages/posts/posts",
-    "pages/posts/post-detail/post-detail"
+    "pages/posts/post-detail/post-detail",
+    "pages/movies/movies"
   ],
   "window": {
     "navigationBarBackgroundColor": "#40ae3b",
@@ -11,5 +12,24 @@
     "backgroundColor": "#ccc",
     "backgroundTextStyle": "light",
     "enablePullDownRefresh": true
+  },
+  "tabBar": {
+    "backgroundColor": "#40ae3b",
+    "color": "#fff",
+    "selectedColor": "#f40",
+    "list": [
+      {
+        "pagePath": "pages/posts/posts",
+        "text": "阅读",
+        "iconPath": "/images/images/avatar/1.png",
+        "selectedIconPath": "/images/images/avatar/2.png"
+      },
+      {
+        "pagePath": "pages/movies/movies",
+        "text": "电影",
+        "iconPath": "/images/images/avatar/3.png",
+        "selectedIconPath": "/images/images/avatar/4.png"
+      }
+    ]
   }
 }
